# opam-nix-integration

./: .gitignore  .ocamlformat  LICENSE  README.md  default.nix  dune-project  flake.nix  nix.opam  opam-repository.nix  opam0install2nix.opam  opam2nix.opam  opamsubst2nix.opam  opamvars2nix.opam  overlay.nix
.github/actions/export-nix-store/: action.yaml
.github/workflows/: main.yaml
examples/flake/: flake.nix
examples/repository/: default.nix
examples/standard/: default.nix
hydra/: jobs.nix  jobsets-generator.nix  jobsets.nix  project.json
nix/: fix-findlib.nix  lib.nix  make-package.nix  opam.nix  repository-index.nix  repository-info.nix  repository.nix  scope.nix  selection.nix
nix/boot/: overlay.nix
nix/eval/: constraint.nix  env.nix  filter.nix  formula.nix
nix/lib/: default.nix
nix/lib/opam/: default.nix
nix/scope/: base.nix  call-opam2nix.nix  default.nix  generate-opam2nix.nix  infer-opam-location.nix  lib.nix  make-opam-derivation.nix  opam-repository.nix  opam.nix
patches/: checkseum-0.3.2.patch  cmdliner-1.0.4.patch  conf-gmp-4.patch  conf-libffi-2.0.0.patch  digestif-1.1.0.patch  zarith-1.12.patch
src/: arg.ml  depends.ml  dune  env.ml  filter.ml  generate_derivation_command.ml  lib.ml  nix.ml  opam2nix.ml  opam_variables_command.ml  script.ml  solve_0install_command.ml  substitute_command.ml  var.ml
src/nix/: dune  expr.ml  nix.ml  nix.mli  opam2nix_nix.ml  print.ml
src/opam0install2nix/: dune  opam0install2nix.ml
src/opam2nix/: conversion.ml  depends.ml  dune  filter.ml  opam2nix.ml  script.ml  var.ml
src/opam2nix_lib/: common.ml  constraint.ml  dune  env.ml  env.mli  filter.ml  formula.ml  interpolated_string.ml  names.ml  opam2nix_lib.ml
src/opamsubst2nix/: dune  opamsubst2nix.ml
src/opamvars2nix/: dune  opamvars2nix.ml
(+25 files in other folders)
